Fixed deep-link scrolling issue so that content is not hidden behind header

--- a/css/particles.css
+++ b/css/particles.css
@@ -4,7 +4,7 @@ particles-wrapper {
     position: absolute;
     top: 0px;
     width: 100%;
-    height: 340px;
+    height: 260px;
     padding: 0px;
     margin: 0px;
     overflow: hidden;
