--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,10 @@
 /* Responsive Design */
+* {
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+
 hamburger-menu {
     display: none;
     position: fixed;
@@ -27,7 +33,7 @@ ul.menu {
     float: right;
     display: none;
     position: fixed;
-    height: 100%;
+    height: 80%;
     width: 100%;
     top: 50px;
     left: 0px;
@@ -39,9 +45,7 @@ ul.menu {
     background: linear-gradient(90deg, #636 0%, #303 50%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#663366",endColorstr="#330033",GradientType=1);
     border-top: 1px solid #e4ebfd;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
+    border-bottom: 1px solid #e4ebfd;
     text-align: right;
 }
 
