--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,19 @@
 }
 
 /* HTML Element Formatting */
+* {
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+img {
+    border: none;
+}
+
+p {
+    margin: 20px 0px 0px 0px;
+}
+
 html {
     scroll-behavior: smooth;
 }
@@ -20,27 +33,13 @@ body {
     color: #333;
     font-size: 14px;
     text-align: left;
-    letter-spacing: 0.075em;
+    letter-spacing: 0.08em;
     -ms-text-size-adjust: none;
     -webkit-text-size-adjust: none;
     text-align: left;
 }
 
-img {
-    border: none;
-}
-
-    img.title {
-        padding-right: 10px;
-        content: '\A';
-    }
-
-p {
-    margin: 20px 0px 0px 0px;
-}
-
-/* Custom Element Formatting */
-header {
+nav {
     height: 50px;
     width: 100%;
     position: fixed;
@@ -53,10 +52,37 @@ header {
     background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #636), color-stop(1, #303));
     background-image: -moz-linear-gradient(center top, #636 0%, #303 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#663366",endColorstr="#330033",GradientType=1);
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
     text-align: right;
+    z-index: 500;
+}
+
+/* Custom Element Formatting */
+content {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 80px;
+    margin: 0px auto;
+    overflow: visible;
+    text-align: left;
+}
+
+footer {
+    height: 30px;
+    width: 100%;
+    position: fixed;
+    bottom: 0px;
+    margin: 0px;
+    padding-top: 8px;
+    border-top: 1px solid #333;
+    background-color: #636;
+    background-image: linear-gradient(top, #303 0%, #636 100%);
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #303), color-stop(1, #636));
+    background-image: -moz-linear-gradient(center top, #303 0%, #636 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#663366",endColorstr="#330033",GradientType=1);
+    text-align: center;
+    color: #e4ebfd;
+    font-size: 0.8em;
     z-index: 500;
 }
 
@@ -64,21 +90,17 @@ intro {
     height: 260px;
     width: 100%;
     position: absolute;
-    top: 80px;
+    top: 0px;
     left: 0px;
     margin: 0px auto;
     padding-top: 0px;
     overflow: hidden;
-    background: scroll 0 0;
+    border-bottom: 1px solid #333;
     background-color: #969;
     background-image: linear-gradient(top, #969 0%, #636 100%);
     background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #969), color-stop(1, #636));
     background-image: -moz-linear-gradient(center top, #969 0%, #636 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#996699",endColorstr="#663366",GradientType=1);
-    border-bottom: 1px solid #e4ebfd;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
     text-align: center;
     color: #fff;
     z-index: 100;
@@ -89,33 +111,20 @@ social {
     height: auto;
     width: 42px;
     position: absolute;
-    top: 100px;
+    top: 20px;
     right: 20px;
     margin: 0px;
     padding: 0px;
     overflow: hidden;
     text-align: right;
-    z-index: 300;
-}
-
-content {
-    height: auto;
-    width: 100%;
-    position: relative;
-    top: 340px;
-    margin: 0px auto;
-    overflow: auto;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    text-align: left;
+    z-index: 3000;
 }
 
 section {
     height: auto;
     width: auto;
     position: relative;
-    margin: 40px 20px 0px 20px;
+    margin: 40px 20px 20px 20px;
     padding: 5px 0px;
     border-top: 1px solid #333;
     border-bottom: 1px solid #333;
@@ -124,12 +133,8 @@ section {
     text-align: center;
 }
 
-    section::before {
-        content: " ";
-        display: block;
-        height: 80px;
-        margin: -80px 0 0;
-        visibility: hidden;
+    section:first-of-type {
+        margin-top: 300px;
     }
 
 arrow {
@@ -149,32 +154,17 @@ section-content {
     margin: 0px 20px;
     position: relative;
     padding: 0px;
-    text-align: left;
-}
-
-footer {
-    height: auto;
-    width: 100%;
-    position: fixed;
-    bottom: 0px;
-    margin: 0px;
-    padding: 5px 20px 5px 20px;
-    overflow: hidden;
-    background-color: #636;
-    background-image: linear-gradient(top, #303 0%, #636 100%);
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #303), color-stop(1, #636));
-    background-image: -moz-linear-gradient(center top, #303 0%, #636 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#663366",endColorstr="#330033",GradientType=1);
-    border-top: 1px solid #e4ebfd;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    text-align: center;
-    color: #e4ebfd;
-    z-index: 500;
+    text-align: justify;
 }
 
 /* Formatting Classes */
+.section-anchor {
+    margin-top: -120px;
+    height: 120px;
+    display: block;
+    visibility: hidden;
+}
+
 .clickable {
     cursor: pointer;
 }
